--- a/css/lovehub.css
+++ b/css/lovehub.css
@@ -174,7 +174,7 @@ section {
     background-color: rgba(250, 250, 250, 0.8);
 }
 .split-padding4 {
-    background-color: rgba(0, 0, 0, 0.05);
+    background-color: rgba(0, 0, 0, 0);
 }
 
 a .fa-circle {
@@ -206,6 +206,7 @@ a:hover .fa-circle {
     font-size: 18px;
     background-color: #fdfdfd;
     color: #212121;
+    box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
 }
 .navbar-custom.top-nav-collapse a {
   color: #212121!important;
@@ -286,6 +287,10 @@ a:hover .fa-circle {
     padding: 3px 5px 0;
     margin-bottom: 0;
 }
+h2 {
+  width: 100%;
+  text-align: center;
+}
 
 /* Intro */
 
@@ -322,8 +327,9 @@ a:hover .fa-circle {
     padding: 50px 0;
 }
 .intro .intro-body .brand-heading {
-    font-size: 24px;
-    /*font-weight: 800;*/
+    font-size: 22px;
+    font-weight: 800;
+    text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.75);
     letter-spacing: 2px;
     margin: 0 0 5px;
 }
@@ -331,12 +337,15 @@ a:hover .fa-circle {
     color: #00a8ff;
 }
 .intro .intro-body .intro-text {
-    font-size: 20px;
-    /*font-weight: 800;*/
+    font-size: 16px;
+    font-weight: 800;
+    text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.75);
     text-transform: uppercase;
+    transition: content 0.5s ease;
+    color: #ffb300;
 }
 .service-link {
-  height: 130px;
+  height: 120px;
   padding: 50px 0;
   text-align: center;
   font-size: 1.2em;
@@ -345,8 +354,12 @@ a:hover .fa-circle {
   color: white;
   text-decoration: none;
   text-shadow: 2px 2px rgba(0, 0, 0, .5);
-  background-color: rgba(0, 0, 0, 0.3);
+  background-color: rgba(0, 0, 0, 0.4);
+  transition: background-color 0.5s ease;
   /*color: #00a8ff;*/
+}
+.service-link:hover{
+  background-color: rgba(0, 0, 0, 0.1);
 }
 #link-ortomolecular {
   background-image: url(../img/ortomolecular.jpg);
@@ -368,13 +381,21 @@ a:hover .fa-circle {
   background-size: cover;
   padding: 0;
 }
-
+.content-text {
+  padding: 0 2em;
+}
 @media(min-width:768px) {
     .intro {
         padding: 0;
     }
     .intro .intro-body .brand-heading {
         font-size: 50px;
+    }
+    .intro .intro-body .intro-text {
+        font-size: 24px;
+    }
+    .service-link {
+      height: 130px;
     }
 }
 
@@ -552,4 +573,11 @@ a:hover .fa-circle {
 }
 .associate-logo img {
   width: 100%;
+}
+.card .sub-text {
+  max-width: 600px;
+  margin: 10px auto 40px;
+}
+.card img {
+  width: 150px;
 }
