--- a/css/lovehub.css
+++ b/css/lovehub.css
@@ -432,19 +432,16 @@ h2 {
     }
 }
 
-/* Progress Bar */
-
-#progress {
+#associates {
     background-color: #f0f0f0;
     color: #212121;
     padding: 3em 0;
-    height: 70vh;
 }
-#progress .row, #treatments .row {
+#associates .row, #services .row, #treatments .row {
   width: 90%;
   margin: auto;
 }
-.progress {
+.associates {
     margin-bottom: 40px;
     background-color: #333;
 }
@@ -500,18 +497,19 @@ h2 {
 }
 
 .associate-logo {
-  display: block;
-  min-height: 6em!important;
-  width: 100%;
-  text-align: center;
-  margin: 0 0 2em;
+}
+.associate-logo a {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 7em;
+  margin: 2em 0;
+  /*display: block;*/
 }
 @media(min-width:949px) {
   .associate-logo {
-    display: inline-block;
-    height: 4em;
-    width: 20em;
-    margin: 6em 0 0;
+    display: table-cell;
+    vertical-align: middle;
   }
 }
 .card .sub-text {
@@ -547,8 +545,17 @@ h2 {
 .btn-primary, .btn-default {
   border-radius: 4px!important;
 }
-.treatments, .progress, .team, .who-we-are {
+.services, .treatments, .team, .who-we-are {
   position: relative;
+}
+.service-name {
+  display: block;
+  text-align: center;
+  font-size: 1.8em;
+  font-weight: bold;
+}
+.service-icon {
+  height: 4em;
 }
 .item-left {
   position: absolute;
@@ -560,4 +567,92 @@ h2 {
   position: absolute;
   bottom: 0;
   right: 0;
+}
+
+/* --------------------------- */
+/* --------PopUp-------------- */
+/* --------------------------- */
+/* Styles for dialog window */
+#apiterapia-popup,
+#homeopatia-popup,
+#terapia-neural-popup,
+#nutricion-ortomolecular-popup {
+	background: white;
+	padding: 20px 30px;
+	text-align: left;
+  width: 100%;
+	max-width: 800px;
+	margin: 40px auto;
+	position: relative;
+}
+
+
+/**
+ * Fade-move animation for second dialog
+ */
+
+/* at start */
+.my-mfp-slide-bottom .zoom-anim-dialog {
+	opacity: 0;
+	-webkit-transition: all 0.2s ease-out;
+	-moz-transition: all 0.2s ease-out;
+	-o-transition: all 0.2s ease-out;
+	transition: all 0.2s ease-out;
+
+	-webkit-transform: translateY(-20px) perspective( 600px ) rotateX( 10deg );
+	-moz-transform: translateY(-20px) perspective( 600px ) rotateX( 10deg );
+	-ms-transform: translateY(-20px) perspective( 600px ) rotateX( 10deg );
+	-o-transform: translateY(-20px) perspective( 600px ) rotateX( 10deg );
+	transform: translateY(-20px) perspective( 600px ) rotateX( 10deg );
+
+}
+
+/* animate in */
+.my-mfp-slide-bottom.mfp-ready .zoom-anim-dialog {
+	opacity: 1;
+	-webkit-transform: translateY(0) perspective( 600px ) rotateX( 0 );
+	-moz-transform: translateY(0) perspective( 600px ) rotateX( 0 );
+	-ms-transform: translateY(0) perspective( 600px ) rotateX( 0 );
+	-o-transform: translateY(0) perspective( 600px ) rotateX( 0 );
+	transform: translateY(0) perspective( 600px ) rotateX( 0 );
+}
+
+/* animate out */
+.my-mfp-slide-bottom.mfp-removing .zoom-anim-dialog {
+	opacity: 0;
+
+	-webkit-transform: translateY(-10px) perspective( 600px ) rotateX( 10deg );
+	-moz-transform: translateY(-10px) perspective( 600px ) rotateX( 10deg );
+	-ms-transform: translateY(-10px) perspective( 600px ) rotateX( 10deg );
+	-o-transform: translateY(-10px) perspective( 600px ) rotateX( 10deg );
+	transform: translateY(-10px) perspective( 600px ) rotateX( 10deg );
+}
+
+/* Dark overlay, start state */
+.my-mfp-slide-bottom.mfp-bg {
+	opacity: 0;
+
+	-webkit-transition: opacity 0.3s ease-out;
+	-moz-transition: opacity 0.3s ease-out;
+	-o-transition: opacity 0.3s ease-out;
+	transition: opacity 0.3s ease-out;
+}
+/* animate in */
+.my-mfp-slide-bottom.mfp-ready.mfp-bg {
+	opacity: 0.8;
+}
+/* animate out */
+.my-mfp-slide-bottom.mfp-removing.mfp-bg {
+	opacity: 0;
+}
+
+.card {
+  height: 300px;
+  cursor: pointer;
+}
+
+.card .back {
+  background-color: #eee;
+  padding: .5em;
+  border-radius: 10px;
 }
