--- a/css/lovehub.css
+++ b/css/lovehub.css
@@ -16,6 +16,13 @@ body {
     /*color: #000;*/
     /*background-color: #fff;*/
 }
+.formato{
+	
+	
+	margin-left: auto;
+	margin-right: auto;
+	padding: 20px;
+}
 
 h1, h2, h3, h4, h5, h6 {
     margin: 0 0 35px;
